Criação da view de projetos Utilização do componente ring aplicação do tema Aftenoon do Prime Faces,

--- a/src/main/webapp/restrict/GerenciaProjeto.xhtml
+++ b/src/main/webapp/restrict/GerenciaProjeto.xhtml
@@ -1,24 +1,22 @@
-<ui:composition
-	  xmlns="http://www.w3.org/1999/xhtml"
-	  xmlns:ui="http://java.sun.com/jsf/facelets"
-	  xmlns:h="http://java.sun.com/jsf/html"
-	  xmlns:f="http://java.sun.com/jsf/core"
-      xmlns:p="http://primefaces.org/ui"
-      template="/template/Layout.xhtml" >
+<ui:composition xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:p="http://primefaces.org/ui" template="/template/Layout.xhtml">
 	<!--  xmlns:c="http://java.sun.com/jsf/jstl/core"> -->
-      
-      <ui:define name="content">
-      	<p:tabView id="tbvGerenciaDeProjeto">
-      		<p:tab title="Dados Projeto">
-      		</p:tab>
-      		<p:tab title="Lista de Requisitos">
-      		</p:tab>	
-      		<p:tab title="Sprints">
-      		</p:tab>	
-      		<p:tab title="TaskBoard">
-      		</p:tab>	
-      		<p:tab title="Burndown">
-      		</p:tab>	
-      	</p:tabView>
-      	 </ui:define>
+
+	<ui:define name="content">
+		<p:tabView id="tbvGerenciaDeProjeto">
+			<p:tab title="Dados Projeto">
+			</p:tab>
+			<p:tab title="Lista de Requisitos">
+			</p:tab>
+			<p:tab title="Sprints">
+			</p:tab>
+			<p:tab title="TaskBoard">
+			</p:tab>
+			<p:tab title="Burndown">
+			</p:tab>
+		</p:tabView>
+	</ui:define>
 </ui:composition>
