--- a/src/main/webapp/restrict/CadastrarProjeto.xhtml
+++ b/src/main/webapp/restrict/CadastrarProjeto.xhtml
@@ -2,10 +2,9 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:p="http://primefaces.org/ui" template="/template/Layout.xhtml">
+	xmlns:p="http://primefaces.org/ui" template="/template/Layout.xhtml"
+	>
 	<!--  xmlns:c="http://java.sun.com/jsf/jstl/core"> -->
-
-
 	
 	<ui:define name="content">
 	
