--- a/src/main/webapp/restrict/CadastrarScrumMaster.xhtml
+++ b/src/main/webapp/restrict/CadastrarScrumMaster.xhtml
@@ -28,12 +28,12 @@
 						<p:panel>
 							<p:commandButton value="Salvar"
 								action="#{scrumMasterController.salvar}"
-								image="ui-icon ui-icon-disk" >
+								image="ui-icon ui-icon-disk" update=":tbv1:formSM">
 							</p:commandButton>
 
 							<p:commandButton value="Cancelar"
 								actionListener="#{scrumMasterController.clear}"
-								image="ui-icon ui-icon-close" update="@form">
+								image="ui-icon ui-icon-close" update=":tbv1:formSM">
 							</p:commandButton>
 						</p:panel>
 					</h:panelGrid>
