--- a/src/main/webapp/Login.xhtml
+++ b/src/main/webapp/Login.xhtml
@@ -1,34 +1,56 @@
-<!DOCTYPE html>
-<html xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:h="http://java.sun.com/jsf/html"
+<!DOCTYPE html >
+<html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:p="http://primefaces.org/ui">
 <h:head>
-	<title>Login Prime Scrum</title>
+	<title><ui:insert name="titulo">Prime_Scrum</ui:insert></title>
+	<!--  <h:outputStylesheet name="style.css" />-->
+	<link rel="shortcut icon" href="./images/primescrum.ico" />
+	<link href="./css/login.css" type="text/css" rel="stylesheet"/>
 </h:head>
 <h:body>
-	<h:form styleClass="loginPanelStyle" >
+
+	<p:layout fullPage="true">
+
+		<p:layoutUnit position="north" size="75" header="Prime Scrum"
+			resizable="false" closable="false" collapsible="false">
+		</p:layoutUnit>
+
+		<p:layoutUnit position="center">
+			<!-- <ui:include src="./tiles/TabView.xhtml" />-->
+			<ui:insert name="content">
+				<h:form styleClass="loginPanelStyle" >
 	
 		<p:growl id="msgs" showDetail="true" sticky="false" />
 		
 			<p:panelGrid columns="2">
 				<f:facet name="header">Prime Scrum Login</f:facet>
-				<h:outputText value="Username : "></h:outputText>
-				<p:inputText id="username" required="true"
+				<h:outputText value="Login : "></h:outputText>
+				<p:inputText value="#{loginController.username}" id="username" required="true"
 					requiredMessage="Please Enter Username!" message="fc">
 					<f:validateLength minimum="1" />
 				</p:inputText>
-				<h:outputText value="Password : "></h:outputText>
-				<p:password id="password" required="true"
+				<h:outputText value="Senha : "></h:outputText>
+				<p:password value="#{loginController.password}" id="password" required="true"
 					requiredMessage="Please Enter password!">
 					<f:validateLength minimum="1" />
 				</p:password>
 				<f:facet name="footer">
-					<p:commandButton value="Submit" update="msgs" type="submit"
-						icon="ui-icon-check" style="margin:0"></p:commandButton>
+					<p:commandButton value="Submit" update="msgs"  actionListener="#{loginController.login}"  type="submit"	icon="ui-icon-check" style="margin:0">
+					</p:commandButton>
 				</f:facet>
 			</p:panelGrid>
 		
 	</h:form>
+			</ui:insert>
+		</p:layoutUnit>
+
+		<p:layoutUnit position="south" size="45" resizable="false"
+			closable="false" collapsible="false">
+
+		</p:layoutUnit>
+	</p:layout>
 </h:body>
 </html>
