--- a/src/main/webapp/restrict/ListaProjetos.xhtml
+++ b/src/main/webapp/restrict/ListaProjetos.xhtml
@@ -55,7 +55,7 @@
 				</p:ring>
 
 				<p:dialog id="dialog" widgetVar="dlgDadosProjeto" showEffect="clip"
-					hideEffect="clip" modal="true" appendToBody="true" width="200"
+					hideEffect="clip" modal="true" appendTo="@(body)" width="200"
 					height="100">
 
 					<p:outputPanel id="detail" style="text-align:center;"
