--- a/src/main/webapp/restrict/ListaProjetos.xhtml
+++ b/src/main/webapp/restrict/ListaProjetos.xhtml
@@ -44,9 +44,11 @@
 						<p:commandButton icon="ui-icon-closethick" actionListener="#{projetoController.deletar}"  onclick="" update="grow" >
 							<f:attribute name="projetoSelecionado" value="#{projeto}" />
 							<p:confirm header="Confirmação" message="Deseja realmente excluir o projeto?" icon="ui-icon-alert" />
-
+								
+							<p:ajax listener="#{projetoController.deletar}"	update="@form" />
+								
 							<p:confirmDialog global="true" showEffect="fade" hideEffect="explode" >
-								<p:commandButton value="Sim" type="button" styleClass="ui-confirmdialog-yes" icon="ui-icon-check"  />
+								<p:commandButton value="Sim" type="button" styleClass="ui-confirmdialog-yes" icon="ui-icon-check"  update="@form"  />
 								<p:commandButton value="Não" type="button" styleClass="ui-confirmdialog-no" icon="ui-icon-close" />
 							</p:confirmDialog>
 						</p:commandButton>
