--- a/src/main/webapp/restrict/desenvolvedor/GerenciaProjeto.xhtml
+++ b/src/main/webapp/restrict/desenvolvedor/GerenciaProjeto.xhtml
@@ -4,7 +4,7 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:p="http://primefaces.org/ui"
 	xmlns:c="http://java.sun.com/jsp/jstl/core"
-	template="/template/Layout.xhtml">
+	template="/template/LayoutCliente.xhtml">
 
 
 	<f:metadata>
@@ -25,16 +25,12 @@
 					<h:panelGrid columns="2" cellpadding="5">
 
 						<h:outputText value="Nome: " />
-						<p:inputText id="prjNome"
+						<p:outputLabel id="prjNome"
 							value="#{projetoController.projetoSelecionado.nome}" />
 							
 						<h:outputLabel value="Cliente" />
-							<p:selectOneMenu value="#{projetoController.projetoSelecionado.cliente}"
-								converter="clienteConverter" label="Cliente" style="width:150px;">
-								<f:selectItem itemLabel="Selecione" noSelectionOption="true" />
-								<f:selectItems value="#{projetoController.todosClientes}"
-									var="pessoa" itemValue="#{pessoa}" itemLabel="#{pessoa.login}" />
-							</p:selectOneMenu>
+							<p:outputLabel value="#{projetoController.projetoSelecionado.cliente.nome}"
+								/>
 
 						<h:outputText value="Desenvolvedores: " />
 						<p:selectCheckboxMenu
@@ -47,81 +43,13 @@
 						</p:selectCheckboxMenu>
 					</h:panelGrid>
 
-					<p:commandButton value="Alterar Projeto"
-						action="#{projetoController.alterar}" image="ui-icon ui-icon-disk"
-						process="@form">
-					</p:commandButton>
+	
 				</h:form>
 
 
 			</p:tab>
 
 			<p:tab title="BackLog">
-
-
-				<p:fieldset title="Novo requisito">
-
-					<h:form prependId="false" id="formTask">
-						<p:growl id="msg0" />
-						<h:panelGrid columns="2" cellpadding="10" styleClass="panelGrid"
-							id="grid0">
-							<h:outputLabel />
-
-							<h:inputHidden id="idTarefa"
-								value="#{tarefaController.tarefa.id_tarefa}" />
-
-							<h:outputLabel for="nomeTarefa" value="Nome.:" />
-
-							<p:inputText id="nomeTarefa" size="40"
-								value="#{tarefaController.tarefa.nome}"
-								onkeyup="this.value = this.value.toUpperCase()" required="true"
-								requiredMessage="O Campo Nome é Obrigatório!">
-							</p:inputText>
-
-							<h:outputLabel value="Desenvolvedor" />
-							<p:selectOneMenu value="#{tarefaController.tarefa.desenvolvedor}"
-								converter="pessoaConverter" label="Desenvolvedor" style="width:150px;">
-								<f:selectItem itemLabel="Selecione" noSelectionOption="true" />
-								<f:selectItems value="#{projetoController.todosDesenvolvedores}"
-									var="pessoa" itemValue="#{pessoa}" itemLabel="#{pessoa.login}" />
-							</p:selectOneMenu>
-
-							<h:outputText value="Prioridade:" />
-							<p:rating value="#{tarefaController.tarefa.prioridade}" />
-
-							<h:outputText value="Dificuldade:" />
-							<h:panelGrid columns="1" style="margin-bottom:10px">
-								<p:inputText id="txtDificuldade"
-									value="#{tarefaController.tarefa.dificuldade}" />
-								<p:slider for="txtDificuldade" step="10" />
-							</h:panelGrid>
-
-							<h:outputLabel for="spinnerStep" value="Tempo de Execução: " />
-
-							<p:spinner id="spinnerStep"
-								value="#{tarefaController.tarefa.tempo_execucao}"
-								stepFactor="0.5" prefix="Horas: " min="0" />
-
-							<p:panel>
-								<p:commandButton value="Salvar"
-									action="#{tarefaController.salvar}"
-									image="ui-icon ui-icon-disk"
-									actionListener="#{tarefaController.setProj}"
-									update=":tbvGerenciaDeProjeto:formTask :tbvGerenciaDeProjeto:formListaRequisitos :tbvGerenciaDeProjeto:taskBoardForm">
-									<!--   <f:attribute name="projeto" value="#{projetoController.projetoSelecionado}" />-->
-								</p:commandButton>
-
-								<p:commandButton value="Cancelar"
-									actionListener="#{tarefaController.clear}"
-									image="ui-icon ui-icon-close"
-									update=":tbvGerenciaDeProjeto:formTask">
-								</p:commandButton>
-							</p:panel>
-						</h:panelGrid>
-					</h:form>
-
-				</p:fieldset>
-
 
 				<p:fieldset title="Requisitos">
 
@@ -136,7 +64,7 @@
 							<p:panel header="#{tarefa.nome}" style="text-align:center">
 
 
-								<h:panelGrid columns="3" style="width:100%">
+								<h:panelGrid columns="1" style="width:100%">
 
 									<p:commandButton update=":tbvGerenciaDeProjeto:dialog"
 										icon="ui-icon-pencil" title="View"
@@ -147,29 +75,14 @@
 
 									<p:growl id="grow" showDetail="true" />
 
-									<p:commandButton icon="ui-icon-trash"
-										actionListener="#{tarefaController.deletar}" update="grow">
-										<f:attribute name="tarefaSelecionada" value="#{tarefa}" />
-										<p:confirm header="Confirmação"
-											message="Deseja realmente excluir esta tarefa?"
-											icon="ui-icon-alert" />
-
-										<p:confirmDialog global="true" showEffect="fade"
-											hideEffect="explode">
-											<p:commandButton value="Sim" type="button"
-												styleClass="ui-confirmdialog-yes" icon="ui-icon-check" />
-											<p:commandButton value="Não" type="button"
-												styleClass="ui-confirmdialog-no" icon="ui-icon-close" />
-										</p:confirmDialog>
-									</p:commandButton>
 								</h:panelGrid>
 							</p:panel>
 
 						</p:dataGrid>
 					</h:form>
 					<p:dialog id="dialog" widgetVar="dlgDadostarefa" showEffect="clip"
-						hideEffect="clip" modal="true" appendTo="@(body)" width="350"
-						height="270">
+						hideEffect="clip" modal="true" appendTo="@(body)" width="270"
+						height="170">
 
 						<h:form id="formDialog">
 							<p:outputPanel id="detail" style="text-align:center;"
@@ -178,42 +91,26 @@
 								<h:panelGrid columns="2" cellpadding="5">
 
 									<h:outputText value="Nome: " />
-									<p:inputText id="trfNome"
+									<p:outputLabel id="trfNome"
 										value="#{tarefaController.tarefaSelecionada.nome}" />
 
 									<h:outputLabel value="Desenvolvedor" />
-									<p:selectOneMenu
-										value="#{tarefaController.tarefaSelecionada.desenvolvedor}"
-										converter="pessoaConverter" label="Desenvolvedor">
-										<f:selectItem itemLabel="Selecione" noSelectionOption="true" />
-										<f:selectItems
-											value="#{projetoController.todosDesenvolvedores}"
-											var="pessoa" itemValue="#{pessoa}"
-											itemLabel="#{pessoa.login}" />
-									</p:selectOneMenu>
+									<p:outputLabel
+										value="#{tarefaController.tarefaSelecionada.desenvolvedor.nome}"
+									/>
 
 									<h:outputText value="Prioridade:" />
-									<p:rating
-										value="#{tarefaController.tarefaSelecionada.prioridade}" />
+									<p:rating value="#{tarefaController.tarefaSelecionada.prioridade}" readonly="true"/>
 
 									<h:outputText value="Dificuldade:" />
-									<h:panelGrid columns="1" style="margin-bottom:10px">
-										<p:inputText id="txtDificuldade"
+									<p:outputLabel id="txtDificuldade"
 											value="#{tarefaController.tarefaSelecionada.dificuldade}" />
-										<p:slider for="txtDificuldade" step="10" />
-									</h:panelGrid>
 
-									<h:outputLabel for="spinnerStep" value="Tempo de Execução: " />
-									<p:spinner id="spinnerStep"
-										value="#{tarefaController.tarefaSelecionada.tempo_execucao}"
-										stepFactor="0.5" prefix="Horas: " min="0" />
-
+									<h:outputLabel for="txtTempo_ex" value="Tempo de Execução: " />
+									<p:outputLabel id="txtTempo_ex" value="Horas: ">
+										#{tarefaController.tarefaSelecionada.tempo_execucao}
+									</p:outputLabel>
 								</h:panelGrid>
-								<p:commandButton value="Alterar Dados" image="ui-icon-check"
-									action="#{tarefaController.atualizarDados}"
-									update=":tbvGerenciaDeProjeto:formListaRequisitos"
-									process="@form" />
-
 							</p:outputPanel>
 						</h:form>
 					</p:dialog>
