--- a/src/main/webapp/restrict/desenvolvedor/ListaProjetos.xhtml
+++ b/src/main/webapp/restrict/desenvolvedor/ListaProjetos.xhtml
@@ -4,7 +4,7 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:p="http://primefaces.org/ui"
 	xmlns:c="http://java.sun.com/jsp/jstl/core"
-	template="/template/LayoutCliente.xhtml">
+	template="/template/LayoutDev.xhtml">
 
 	<f:metadata>
 		<f:viewAction action="#{projetoController.buscarTodosProjetos}" />
