Persisitindo dados de tarefas de cada usuário

--- a/src/main/webapp/restrict/ListaProjetos.xhtml
+++ b/src/main/webapp/restrict/ListaProjetos.xhtml
@@ -12,11 +12,11 @@
 
 
 	<ui:define name="content">
-		<p:fieldset legend="Projetos de ...">
+		<p:fieldset legend="Projetos de">
 			<h:form id="formRing">
 			
 
-				<p:ring id="prjRing" value="#{projetoController.projetosBuscados}"
+				<p:ring id="prjRing" value="#{projetoController.projetosPorSM}"
 					var="projeto">
 
 					<p:outputPanel style="text-align:center;" layout="block"> 
