Ordenação de datas para Burndown

--- a/src/main/webapp/restrict/GerenciaProjeto.xhtml
+++ b/src/main/webapp/restrict/GerenciaProjeto.xhtml
@@ -89,7 +89,7 @@
 
 							<p:inputText id="nomeTarefa" size="40"
 								value="#{tarefaController.tarefa.nome}"
-								onkeyup="this.value = this.value.toUpperCase()" required="true"
+								required="true"
 								requiredMessage="O Campo Nome é Obrigatório!">
 							</p:inputText>
 
