Inicio de manutenção no Login

--- a/src/main/webapp/Login.xhtml
+++ b/src/main/webapp/Login.xhtml
@@ -37,7 +37,7 @@
 					<f:validateLength minimum="1" />
 				</p:password>
 				<f:facet name="footer">
-					<p:commandButton value="Submit" update="msgs"  actionListener="#{loginController.login}"  type="submit"	icon="ui-icon-check" style="margin:0">
+					<p:commandButton value="Entrar" update="msgs"  actionListener="#{loginController.login}"  type="submit"	icon="ui-icon-check" style="margin:0">
 					</p:commandButton>
 				</f:facet>
 			</p:panelGrid>
