Cadastrar na view login

--- a/src/main/webapp/restrict/home.xhtml
+++ b/src/main/webapp/restrict/home.xhtml
@@ -7,7 +7,7 @@
 	  xmlns:c="http://java.sun.com/jsf/jstl/core"	
       xmlns:p="http://primefaces.org/ui">
       
-		<p:layoutUnit position="north" size="75" header="Prime Scrum sdvdsv"
+		<p:layoutUnit position="north" size="75" header="Prime Scrum"
 			resizable="false" closable="false" collapsible="false">
 		</p:layoutUnit>
       
