--- a/src/main/webapp/restrict/desenvolvedor/ListaProjetos.xhtml
+++ b/src/main/webapp/restrict/desenvolvedor/ListaProjetos.xhtml
@@ -16,7 +16,7 @@
 			<h:form id="formRing">
 			
 
-				<p:ring id="prjRing" value="#{projetoController.projetosBuscados}"
+				<p:ring id="prjRing" value="#{projetoController.projetosPorDev}"
 					var="projeto">
 
 					<p:outputPanel style="text-align:center;" layout="block"> 
