--- a/src/main/webapp/Login.xhtml
+++ b/src/main/webapp/Login.xhtml
@@ -9,6 +9,7 @@
 	<!--  <h:outputStylesheet name="style.css" />-->
 	<link rel="shortcut icon" href="./images/primescrum.ico" />
 	<link href="./css/login.css" type="text/css" rel="stylesheet"/>
+	<script type="text/javascript" src="./js/script.js"/>
 </h:head>
 <h:body>
 
@@ -44,6 +45,9 @@
 				</f:facet>
 			</p:panelGrid>
 	</h:form>
+			<div id="loader" align="center"> 
+				<!-- <img width="40px" height="40px" src="./images/loading.gif"/> -->
+			</div>
 			</ui:insert>
 		</p:layoutUnit>
 
