--- a/src/main/webapp/restrict/cliente/ListaProjetos.xhtml
+++ b/src/main/webapp/restrict/cliente/ListaProjetos.xhtml
@@ -12,7 +12,7 @@
 
 
 	<ui:define name="content">
-		<p:fieldset legend="Projetos de ...">
+		<p:fieldset legend="Projetos de #{loginController.usuarioLogado.nome}">
 			<h:form id="formRing">
 			
 
