--- a/src/main/webapp/restrict/desenvolvedor/AlterarDesenvolvedor.xhtml
+++ b/src/main/webapp/restrict/desenvolvedor/AlterarDesenvolvedor.xhtml
@@ -7,7 +7,7 @@
 
 	<ui:define name="content">
 		<p:tabView id="tbv1">
-			<p:tab title="Scrum Master">
+			<p:tab title="Desenvolvedor">
 				<h:form prependId="false" id="formSM">
 					<p:growl id="msg0" />
 					<h:panelGrid columns="2" cellpadding="10" styleClass="panelGrid"
