--- a/src/main/webapp/Login.xhtml
+++ b/src/main/webapp/Login.xhtml
@@ -46,7 +46,7 @@
 			</p:panelGrid>
 	</h:form>
 			<div id="loader" align="center"> 
-				<!-- <img width="40px" height="40px" src="./images/loading.gif"/> -->
+				<img width="40px" height="40px" src="./images/loading.gif"/> 
 			</div>
 			</ui:insert>
 		</p:layoutUnit>
