--- a/src/main/webapp/restrict/GerenciaProjeto.xhtml
+++ b/src/main/webapp/restrict/GerenciaProjeto.xhtml
@@ -31,16 +31,16 @@
 						<h:outputLabel value="Cliente" />
 						<p:selectOneMenu
 							value="#{projetoController.projetoSelecionado.cliente}"
-							converter="clienteConverter" label="Cliente" style="width:150px;"
-							filter="true">
-							<f:selectItem  noSelectionOption="true" />
+							converter="clienteConverter" label="Cliente" 
+							filter="true" style="width:150px;">
+							<f:selectItem  noSelectionOption="true"/>
 							<f:selectItems value="#{projetoController.todosClientes}"
-								var="pessoa" itemValue="#{pessoa}" itemLabel="#{pessoa.login}" />
+								var="pessoa" itemValue="#{pessoa}" itemLabel="#{pessoa.login}"  />
 						</p:selectOneMenu>
 
 						<h:outputText value="Desenvolvedores: " />
 						<p:selectCheckboxMenu
-							value="#{projetoController.projetoSelecionado.listaDesenvolvedores}"
+							value="#{projetoController.projeto.listaDesenvolvedores}"
 							label="Defina os desenvolvedores" filter="true"
 							filterText="Filter" filterMatchMode="startsWith"
 							panelStyle="width:220px" converter="pessoaConverter">
